# gulf-buoy-etl

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  Makefile  README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
dashboard/: generate.py
data/sample/: 42002.txt  42019.csv  42020.csv  42035.txt
docs/: METHODS.md
etc/: crontab  gulf-buoy-etl.service  gulf-buoy-etl.timer  stations.yaml
gbe/: __init__.py  archive.py  cli.py  config.py  metrics.py  pipeline.py  publish.py  qc.py  retry.py  transform.py  validation.py
gbe/sources/: __init__.py  ndbc.py  tabs.py
notebooks/: 01_buoy_qc_walkthrough.ipynb
scripts/: __init__.py  demo_from_sample.py  generate_sample.py
tests/: conftest.py  test_config.py  test_metrics.py  test_pipeline.py  test_qc.py  test_retry.py  test_sources.py  test_transform.py  test_validation.py
